<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dtl.storyhub.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_comicDetailFragment"
            app:destination="@id/comicDetailFragment" />
        <action
            android:id="@+id/action_navigation_home_to_categoryFragment"
            app:destination="@id/categoryFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.dtl.storyhub.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_navigation_categories_to_categoryFragment"
            app:destination="@id/categoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.dtl.storyhub.BookmarkFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmark">
        <action
            android:id="@+id/action_navigation_bookmarks_to_comicDetailFragment"
            app:destination="@id/comicDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dtl.storyhub.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_comicDetailFragment"
            app:destination="@id/comicDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/comicDetailFragment"
        android:name="com.dtl.storyhub.StoryDetailFragment"
        android:label="@string/title_story_detail"
        tools:layout="@layout/fragment_story_detail">
        <argument
            android:name="comicId"
            app:argType="string" />
        <action
            android:id="@+id/action_comicDetailFragment_to_comicReaderFragment"
            app:destination="@id/comicReaderFragment" />
    </fragment>

    <fragment
        android:id="@+id/comicReaderFragment"
        android:name="com.dtl.storyhub.ComicReaderFragment"
        android:label="@string/title_comic_reader"
        tools:layout="@layout/fragment_comic_reader">
        <argument
            android:name="comicId"
            app:argType="string" />
        <argument
            android:name="chapterId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.dtl.storyhub.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category">
        <argument
            android:name="categoryId"
            app:argType="string" />
        <argument
            android:name="categoryName"
            app:argType="string" />
        <action
            android:id="@+id/action_categoryFragment_to_comicDetailFragment"
            app:destination="@id/comicDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.dtl.storyhub.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_navigation_search_to_comicDetailFragment"
            app:destination="@id/comicDetailFragment" />
    </fragment>
</navigation>